# haskgrad

./: .gitignore  Errors.hs  README.md  Tensor.hs  haskgrad.cabal
app/: .Main.hs.swo  Main.hs
src/: Haskgrad.hs
