cabal-version:      2.4
name:               haskgrad
version:            0.1.0.0
author:             spencerhhubert
maintainer:         spencerhhubert@gmail.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Haskgrad
    build-depends:    base, linear-haskell
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskgrad
    main-is:          Main.hs
    build-depends: base, haskgrad, linear-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
